--- a/content/globals/seo.yaml
+++ b/content/globals/seo.yaml
@@ -9,13 +9,12 @@ data:
   use_social_image_generation: false
   sitemap_collections:
     - pages
-  trackers_local: false
+  trackers_local: true
   trackers_staging: false
-  trackers_production: true
+  trackers_production: false
   use_google_site_verification: false
-  use_fathom: false
+  use_fathom: true
   fathom_use_custom_domain: false
+  fathom: BBAIAWKC
   use_cloudflare_web_analytics: false
   tracker_type: none
-  anonymize_ip: false
-  use_cookie_banner: false
