--- a/content/globals/seo.yaml
+++ b/content/globals/seo.yaml
@@ -10,8 +10,8 @@ data:
   sitemap_collections:
     - pages
   trackers_local: true
-  trackers_staging: false
-  trackers_production: false
+  trackers_staging: true
+  trackers_production: true
   use_google_site_verification: false
   use_fathom: true
   fathom_use_custom_domain: false
