--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -17,3 +17,5 @@ tree:
     entry: 390b8254-8d17-4788-a066-2c4eab3c1cf9
   -
     entry: 8ba65ca8-8026-4835-ad72-6752b99bffa4
+  -
+    entry: b36fdf01-4dac-4b9b-8cf2-692ad1e4d881
