--- a/content/trees/navigation/footer.yaml
+++ b/content/trees/navigation/footer.yaml
@@ -2,3 +2,6 @@ tree:
   -
     id: 64f3813b-fba6-4977-b160-9408fa36d857
     entry: 5c526dbf-9dd7-4c52-98d8-54e00ebddfb6
+  -
+    id: 3e667c81-2700-4a3d-841b-cb638e442d3b
+    entry: b36fdf01-4dac-4b9b-8cf2-692ad1e4d881
