--- a/resources/blueprints/globals/configuration.yaml
+++ b/resources/blueprints/globals/configuration.yaml
@@ -129,3 +129,36 @@ sections:
           instructions_position: above
           visibility: visible
           max_items: 1
+      -
+        handle: telephone
+        field:
+          input_type: text
+          antlers: false
+          display: Telephone
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          visibility: visible
+      -
+        handle: email
+        field:
+          input_type: text
+          antlers: false
+          display: E-Mail
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          visibility: visible
+      -
+        handle: fax
+        field:
+          input_type: text
+          antlers: false
+          display: Fax
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          visibility: visible
