--- a/content/globals/configuration.yaml
+++ b/content/globals/configuration.yaml
@@ -3,7 +3,7 @@ data:
   error_404_entry: 059d4d8d-fc60-49f8-8823-7da10549e84e
   copyright_since: 2016
   privacy_statement_type: none
-  header_button_label: 'Rufen Sie uns an!'
+  header_button_label: 'Zur Beratung'
   header_button_link_type: tel
   header_button_target_blank: false
   header_button_entry: 5c526dbf-9dd7-4c52-98d8-54e00ebddfb6
